infrastructure/kubernetes/services/analytics-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: analytics-service
  namespace: flashstore
  labels:
    app: analytics-service
    app.kubernetes.io/name: analytics-service
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: flashstore

spec:
  type: ClusterIP

  selector:
    app: analytics-service

  ports:
    - name: http
      protocol: TCP
      port: 3006
      targetPort: 3006
